# Scrypto-Advent-Calendar

./: README.md
advent-fe/: README.md  package-lock.json  package.json
advent-fe/public/: index.html
advent-fe/src/: App.vue  main.js
day1/: Cargo.toml  README.md  metadata.json
day1/src/: lib.rs
day10/: Cargo.toml  a.rtm
day10/src/: lib.rs
day11/: README.md  add_participants.rtm  prepare_exchange.rtm  send_from_account1.rtm  send_ipod_from_account2.rtm
day11/GiftExchange/: Cargo.toml
day11/PriceOracle/: Cargo.toml
day12/: Cargo.toml  README.md  start_game.rtm
day12/src/: lib.rs
day13/: README.md  set_current_time_1.rtm  set_current_time_2.rtm  start_work.rtm
day13/elf_work_clock/: Cargo.toml
day13/time_oracle/: Cargo.toml
day14/: Cargo.toml  README.md  try_trigger.rtm  update_current_time.rtm
day14/src/: alarm_clock.rs  coffee_machine.rs  time_oracle.rs
day15/: Cargo.toml  README.md
day15/src/: christmas_party.rs  lib.rs  vaccine_passport.rs  vacine_passport.rs
day16/: Cargo.toml  README.md
day16/src/: lib.rs
day17/: Cargo.toml  README.md
day18/: README.md  add_recipients.rtm  do_unlock.rtm
day19/: Cargo.toml
day2/: Cargo.toml  README.md
day20/: Cargo.toml  README.md
day21/: Cargo.toml  README.md
day22/: Cargo.toml  README.md
day23/: Cargo.toml  README.md
day24/: Cargo.toml  README.md  close_election.rtm  start_election.rtm
day3/: Cargo.toml
day4/: Cargo.toml  README.md
day5/: Cargo.toml
day6/: Cargo.toml
day6/src/: lib.rs
day7/: Cargo.toml  README.md
day8/: Cargo.toml
day9/: README.md
(+30 files in other folders)
