[package]
name = "day6"
version = "0.1.0"
edition = "2018"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto/" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto/" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto/" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.

[lib]
crate-type = ["cdylib", "lib"]
name = "out"
